   something like
	> (defclass foo (standard-class) ())
	> (defclass faa () () (:metaclass foo))

 - Callback functions are now 'static' so that the same names can be used
   in different files.

 - New method for DOCUMENTATION to operate on slot-definition objects.

 - New slot options are now allowed, as well as new metaclass options.

 - SLOT-{VALUE,BOUNDP,MAKUNBOUND}-USING-CLASS now are also specialized for
   standard-effective-slot-definition (Thanks to D. Corkill)

 - Constants are now implicitely declared global in the file in which they are
   defined, so that the compiler no longer issues warnings when they are
   referenced.

 - The slot GENERIC-FUNCTION of a method is initially set to NIL instead of
   left unbound.

 - The old conservative garbage collector works again. It now supports 64-bit
   architectures, though the memory is still limited to 32Mb of lisp data. In
   any case, this collector is only intended for small setups and OpenBSD.

 - The compiler transformed &AUX variables into a LET* form. In doing so, all
   declarations were propageted to the body of the LET* form, even those for
   non-&AUX variables. This could lead to spurious warnings about IGNORE
   declarations.

 - Fix the scope of special declarations in lambda forms so that they do not
   affect the initialization forms of optional, keyword and aux variables.
   Sample code:
	(defun foo (y)
	  (flet ((faa (&key (x y))
		   (declare (special y))
		   x))
	    (let ((y 4))
	      (declare (special y))
	      (faa))))
   A form (FOO 3) produced 4 before the bug was fixed.

 - The compiler now admits THE forms with type (VALUES ...), though they are
   ignored.

 - (DEFPACKAGE ... (:IMPORT NIL)) failed to import symbol NIL.

* Documentation:

 - The HTML manuals now use CSS for a more appealing look.

* Notes:

 [1] Both bugs are related.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***